// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details reducer should set the capacity 1`] = `
Object {
  "capacity": 20,
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2118-07-19",
  "endDateInput": "July 19, 2118",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "19:30:00",
  "endTimeInput": "7:30 pm",
  "price": "",
  "sku": "",
  "iac": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the capacity type 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2118-07-19",
  "endDateInput": "July 19, 2118",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "19:30:00",
  "endTimeInput": "7:30 pm",
  "price": "",
  "sku": "",
  "iac": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the description 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "new description",
  "endDate": "2118-07-19",
  "endDateInput": "July 19, 2118",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "19:30:00",
  "endTimeInput": "7:30 pm",
  "price": "",
  "sku": "",
  "iac": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the end date 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "January 1, 2018",
  "endDateInput": "July 19, 2118",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "19:30:00",
  "endTimeInput": "7:30 pm",
  "price": "",
  "sku": "",
  "iac": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the end date moment 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2118-07-19",
  "endDateInput": "July 19, 2118",
  "endDateMoment": Object {
    "type": "moment",
  },
  "endTime": "19:30:00",
  "endTimeInput": "7:30 pm",
  "price": "",
  "sku": "",
  "iac": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the end time 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2118-07-19",
  "endDateInput": "July 19, 2118",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "13:45",
  "endTimeInput": "7:30 pm",
  "price": "",
  "sku": "",
  "iac": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the end time input 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2118-07-19",
  "endDateInput": "July 19, 2118",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "19:30:00",
  "endTimeInput": "13:45",
  "price": "",
  "sku": "",
  "iac": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the price 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2118-07-19",
  "endDateInput": "July 19, 2118",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "19:30:00",
  "endTimeInput": "7:30 pm",
  "price": 99,
  "sku": "",
  "iac": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the sku 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2118-07-19",
  "endDateInput": "July 19, 2118",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "19:30:00",
  "endTimeInput": "7:30 pm",
  "price": "",
  "sku": "12345678",
  "iac": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the iac setting 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2118-07-19",
  "endDateInput": "July 19, 2118",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "19:30:00",
  "endTimeInput": "7:30 pm",
  "price": "",
  "sku": "",
  "iac": "none",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the start date 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2118-07-19",
  "endDateInput": "July 19, 2118",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "19:30:00",
  "endTimeInput": "7:30 pm",
  "price": "",
  "sku": "",
  "iac": "",
  "startDate": "January 1, 2018",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the start date moment 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2118-07-19",
  "endDateInput": "July 19, 2118",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "19:30:00",
  "endTimeInput": "7:30 pm",
  "price": "",
  "sku": "",
  "iac": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": Object {
    "type": "moment",
  },
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the start time 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2118-07-19",
  "endDateInput": "July 19, 2118",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "19:30:00",
  "endTimeInput": "7:30 pm",
  "price": "",
  "sku": "",
  "iac": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "13:45",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the start time input 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2118-07-19",
  "endDateInput": "July 19, 2118",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "19:30:00",
  "endTimeInput": "7:30 pm",
  "price": "",
  "sku": "",
  "iac": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "13:45",
  "title": "",
}
`;

exports[`Details reducer should set the title 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2118-07-19",
  "endDateInput": "July 19, 2118",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "19:30:00",
  "endTimeInput": "7:30 pm",
  "price": "",
  "sku": "",
  "iac": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "new title",
}
`;
